# bloop-box-client

./: .releaserc.yml  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build-deb.sh  semantic-release-build.sh
.github/workflows/: ci.yml  pull-request.yml  release.yml
cross-rs/: Dockerfile  Dockerfile.aarch64  Dockerfile.armhf
debian/: postinst  postrm  service
docs/: manual-setup.md  system-setup.md
etc/: 011_bloop-box  011_bloop-box-shutdown  99-systemd-spidev.rules  bloop-box.conf
src/: audio.rs  client.rs  engine.rs  etc_config.rs  main.rs  state.rs  thread.rs
src/hardware/: buttons.rs  led.rs  mod.rs  ndef.rs  nfc.rs
src/hardware/emulated/: asset.rs  led.rs  mod.rs  nfc.rs  system.rs  ui.rs
src/hardware/pi/: asset.rs  buttons.rs  led.rs  mod.rs  nfc.rs  system.rs
src/network/: message.rs  mod.rs  skip_certificate_verification.rs  task.rs
src/nfc/: mod.rs  ndef.rs  reader.rs  thread.rs
src/subsystems/: audio_player.rs  button.rs  config_manager.rs  controller.rs  led.rs  mod.rs  networker.rs  volume_control.rs
src/utils/: mod.rs  skip_certificate_verification.rs
src/wifi/: mod.rs  nw.rs  wpa_supplicant.rs
src/wpa_supplicant/: mod.rs  wpa_supplicant.rs
