[package]
name = "bloop-box"
description = "Bloop Box Client"
version = "1.1.0"
authors = ["Ben Scholzen (DASPRiD) <mail@dasprids.de>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
env_logger = "0.9.0"
anyhow = "1.0.57"
log = "0.4.16"
tokio = { version = "1.17.0", features = ["full"] }
tokio-graceful-shutdown = "0.7.0"
async-trait = "0.1.53"
rppal = "0.13.1"
untildify = "0.1.0"
toml = "0.5.9"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"
soloud = "1.0.2"
nfc1 = "0.4.0"
serde_json = "1.0.85"
wpactrl = "0.5.1"
tokio-rustls = "0.23.4"
webpki-roots = "0.22.5"
tokio-io-timeout = "1.2.0"
thiserror = "1.0.37"
futures-util = "0.3.24"
glob = "0.3.0"
hex = "0.4.3"

[profile.release]
strip = "debuginfo"

[package.metadata.deb]
depends = "libnfc6, adduser, bloop-box-data, systemd"
conf-files = ["/etc/bloop-box.conf"]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
extended-description = """\
Bloop Box client for sending bloops to a server.\
"""
section = "games"
priority = "optional"
assets = [
    ["target/arm-unknown-linux-gnueabihf/release/bloop-box", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bloop-box/", "644"],
    ["etc/bloop-box.conf", "etc/", "644"]
]
