[package]
name = "bloop-box"
description = "Bloop Box Client"
version = "3.2.0"
authors = ["Ben Scholzen (DASPRiD) <mail@dasprids.de>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
env_logger = "0.10.0"
anyhow = "1.0.57"
log = "0.4.16"
clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-graceful-shutdown = "0.13.0"
async-trait = "0.1.53"
rppal = "0.14.1"
untildify = "0.1.0"
toml = "0.8.2"
serde = { version = "1.0.136", features = ["derive"] }
rand = "0.8.5"
mfrc522 = "0.6.0"
serde_json = "1.0.85"
tokio-rustls = "0.24.1"
rustls = { version = "0.21.7", features = ["dangerous_configuration"] }
webpki-roots = "0.25.2"
tokio-io-timeout = "1.2.0"
thiserror = "1.0.37"
futures-util = "0.3.24"
glob = "0.3.0"
hex = "0.4.3"
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
rodio = { version = "0.17.1", features = ["symphonia-mp3"] }
aw2013 = "1.0.0"
rand_distr = "0.4.3"
regex = "1.7.1"
lazy_static = "1.4.0"
local-ip-address = "0.5.6"

[profile.release]
strip = "debuginfo"

[package.metadata.deb]
depends = "adduser, bloop-box-data, systemd, network-manager"
conf-files = ["/etc/bloop-box.conf"]
maintainer-scripts = "debian/"
systemd-units = { enable = true }
extended-description = """\
Bloop Box client for sending bloops to a server.\
"""
section = "games"
priority = "optional"
assets = [
    ["target/arm-unknown-linux-gnueabihf/release/bloop-box", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/bloop-box/", "644"],
    ["etc/bloop-box.conf", "etc/", "644"],
    ["etc/011_bloop-box", "etc/sudoers.d/", "440"],
    ["etc/99-systemd-spidev.rules", "lib/udev/rules.d/", "644"]
]
